# bitcoin-taproot-start

./: Cargo.toml
docs/: 基于 BIP-39 生成 Taproot 地址（Rust+rust-bitcoin）.md
examples/merkle_tree/: main.rs  utils.rs
src/: alchemy_client.rs  env_config.rs  main.rs  rune_decode.rs  runes_builder.rs  transactions.rs  txs.rs  utils.rs  wallets.rs  wallets_copy.rs
