[package]
name = "bitcoin-taproot-start"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32.8", features = ["std","rand-std"] }
bitcoin-address-generator = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"                      
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha2 = "0.10"